main.css
@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

:root {
  --bg-color: #ffefff;
  --board-color: #fff;
  --stroke-color: #ffefff;
  --primary-color: #4d4dff;
  --sec-color: #ffe66d;
  --modal-color: #2b2d42;
  --box-shadow: 7px 7px 7px 1px rgba(00, 00, 00, 0.2);
  --text-shadow: 5px 5px 1px #fd6c9e;
}

* {
  box-sizing: border-box;
}

html,
body,
main {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  font-size: 62.5%;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
  text-transform: uppercase;
  text-align: center;
}

i {
  margin-right: 7px;
  color: var(--primary-color);
}

audio {
  display: none;
}

/* Blocks */

.container {
  width: 100%;
  height: 100%;
  text-align: center;
  background: var(--bg-color);
}

.btn {
  padding: 15px;
  margin-top: 50px;
  text-transform: uppercase;
  font-family: 'Audiowide', cursive;
  font-size: 1.8rem;
  color: var(--sec-color);
  background: transparent;
  border: 1.5px solid var(--sec-color);
  cursor: pointer;
}

.modal {
  width: 500px;
  height: 400px;
  margin: auto;
  padding: 15px;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  justify-content: center;
  text-align: center;
  font-size: 2rem;
  background: var(--modal-color);
  box-shadow: var(--box-shadow);
  z-index: 1000;
}

.canvas {
  margin: 0 20px;
  background: var(--board-color);
  border: 0.1px solid var(--stroke-color);
  box-shadow: var(--box-shadow);
}

.aside {
  min-width: 250px;
  min-height: 100px;
  margin: 0 20px 30px;
  padding: 15px;
  letter-spacing: 0.2rem;
  background: var(--board-color);
  box-shadow: var(--box-shadow);
}

/* Elements */

.container__div {
  width: 100%;
}

.container__h3 {
  margin-bottom: 20px;
  font-family: 'Press Start 2P', cursive;
  font-size: 4rem;
  color: var(--sec-color);
}

.container__h4 {
  margin-bottom: 15px;
  font-family: 'Press Start 2P', cursive;
  color: var(--sec-color);
}

.aside__h3 {
  margin-bottom: 10px;
  font-family: 'Press Start 2P', cursive;
  font-size: 1.75rem;
  color: var(--primary-color);
}

.aside__h5 {
  font-family: 'Audiowide', cursive;
  color: var(--primary-color);
}

.aside__div {
  font-family: 'Audiowide', cursive;
  font-size: 2rem;
  color: var(--primary-color);
}

/* Modifiers */

.container--flex-col {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.container--flex-row {
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.container__h4--secondary {
  font-family: 'Audiowide', cursive;
  font-size: 2.5rem;
}

.header__h1 {
  font-family: 'Audiowide', cursive;
  font-size: 7rem;
  font-style: italic;
  letter-spacing: 0.3rem;
  text-shadow: var(--text-shadow);
  color: var(--primary-color);
}

.aside__div--controls {
  padding: 5px;
  align-items: flex-start;
}

.aside__div--key {
  margin-bottom: 5px;
}

.modal--hide {
  display: none;
}

.modal--show {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

